website title updated

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <head>
   <meta charset="utf-8">
-  <title>Victoria DoukaDoukopoulou</title>
+  <title>a detailed catalogue of all things invisible</title>
   <script src="jquery.js"></script>
   <script src="s.js" charset="utf-8"></script>
   <link rel="stylesheet" href="s.css" media="screen" title="no title">
