--- a/small_notes_of_running_into_the_invisible/index.html
+++ b/small_notes_of_running_into_the_invisible/index.html
@@ -1,4 +1,5 @@
 <head>
+  <title>a detailed catalogue of all things invisible</title>
   <script src="lib/jquery.js" charset="utf-8"></script>
   <script src="lib/typed.js" charset="utf-8"></script>
   <script src="text.js" charset="utf-8"></script>
