to load on click

--- a/index.html
+++ b/index.html
@@ -10,16 +10,17 @@
 </head>
 
 <body>
-  <p><i>a detailed catalogue of all things invisible</i> <br>
+  <p><i>a detailed catalogue of all things invisible</i><br>
+    victoria douka-doukopoulou<br>
  <br> <br>
 
-    on display at:
+  <!--  on display at:
    <span id="time_show" class="line"></span><br>
   current time: <span id="time" class="line">time</span></p>
 <br>
 
 
-<p class="showings">upcoming screenings : <span id="showingslist"></span> </p>
+<p class="showings">upcoming screenings : <span id="showingslist"></span> </p>-->
 </body>
 
 </html>
