css updates for browsers and bug fixes

--- a/index.html
+++ b/index.html
@@ -13,6 +13,9 @@
   <p><i>a detailed catalogue of all things invisible</i><br>
     victoria douka-doukopoulou<br>
  <br> <br>
+ <br>
+ <br>
+ <p> *please view in fullscreen mode </p>
 
   <!--  on display at:
    <span id="time_show" class="line"></span><br>
