--- a/here_now_look/index.html
+++ b/here_now_look/index.html
@@ -3,14 +3,15 @@
 
 <head>
   <meta charset="utf-8">
-  <title>v1</title>
+  <title>Victoria DoukaDoukopoulou</title>
   <script src="jquery.js"></script>
   <script src="s.js" charset="utf-8"></script>
   <link rel="stylesheet" href="s.css" media="screen" title="no title">
 </head>
 
 <body>
-  <span></span>
+  <span>here. now, look</span>
+
 </body>
 
 </html>
