--- a/index.html
+++ b/index.html
@@ -3,27 +3,59 @@
 
 <head>
   <meta charset="utf-8">
-  <title>a catalog of all things invisible</title>
+  <title>Victoria DoukaDoukopoulou</title>
   <script src="jquery.js"></script>
   <script src="s.js" charset="utf-8"></script>
   <link rel="stylesheet" href="s.css" media="screen" title="no title">
 </head>
 
 <body>
-  <p><i>a detailed catalogue of all things invisible</i><br>
-    victoria douka-doukopoulou<br>
- <br> <br>
- <br>
- <br>
- <p> *please view in fullscreen mode </p>
+  <section class="left">
+    <p>acatalog.allthingsinvisible.online </p>
+    <p>victoria douka-doukopoulou</p>
+    <p>duration: 17 min</p>
 
-  <!--  on display at:
-   <span id="time_show" class="line"></span><br>
-  current time: <span id="time" class="line">time</span></p>
-<br>
+    <br>
+    <br> entries on display:
+    <ul>
+
+      <li> small notes of running into <br>
+         the invisible</li><br>
+      <li> don't forget your belongings</li><br>
+      <li> a partial archive of staring or <br>
+         in fear of venusian fires</li><br>
+
+    </ul>
+    <br>
+    <br>
+    <br>
+
+    <br>
+  </section>
+
+  <section class="right">
+    <p>I have sat down and built myself a loom. <br> I sit on it day and night and I weave the invisible. <br> I make carpets, and blankets and tapestries.<br> and then I write you letters with instructions<br> on how to see them.<br> I am writing you now, to make plans for you <br> to come and see my tapestries.<br>
+    </p>
+    <p>acatalog.allthingsinvisible.online complies stories of the<br>
+       invisible, the unthinkable and the inappreciable.<br> </p>
+      <p>the installation of the three-fold catalog indexes scores for a<br>
+         performative lecture, a documentary and an archive that <br>
+         can never be actualised as their building material is the <br>
+        invisible itself.</p>
+    <p>the catalog is mainly words — technical words, english words <br>
+       motivated by the sensitivity of practicing the art of <br>
+      noticing, of looking for traces and ways of knowing <br>
+      and world making.</p>
+
+  </section>
 
 
-<p class="showings">upcoming screenings : <span id="showingslist"></span> </p>-->
+  <!-- <br> <br> on display at:
+  <span id="time_show" class="line"></span><br> current time: <span id="time" class="line">time</span></p>
+  <br>
+
+
+  <p class="showings">upcoming screenings : <span id="showingslist"></span> </p> -->
 </body>
 
 </html>
