updated formatting for current state

--- a/index.html
+++ b/index.html
@@ -3,13 +3,18 @@
 
 <head>
   <meta charset="utf-8">
-  <title>Victoria DoukaDoukopoulou</title>
+  <title>acatalog.allthingsinvisible.online </title>
   <script src="jquery.js"></script>
   <script src="s.js" charset="utf-8"></script>
   <link rel="stylesheet" href="s.css" media="screen" title="no title">
 </head>
 
 <body>
+   <header>
+      <p>* please enter full screen mode</p>
+      <p>and click enter to start</p>
+   </header>
+
   <section class="left">
     <p>acatalog.allthingsinvisible.online </p>
     <p>victoria douka-doukopoulou</p>
