--- a/small_notes_on_running_into_the_invisible/index.html
+++ b/small_notes_on_running_into_the_invisible/index.html
@@ -1,5 +1,5 @@
 <head>
-
+<title>small notes on running into the invisible </title>
   <script src="jquery.js"></script>
   <script src="typeit.js"></script>
   <script src="typeit.min.js"></script>
