--- a/test_neumayer/i.html
+++ b/test_neumayer/i.html
@@ -21,10 +21,10 @@
     </ul>
   </header>
   <div class="interlude">
-    <p>Rarely, when Venus is at the crescent stage, the dark sector of its disc is faintly visibly, illuminated by a pale, anaemic glow, the 'ashen light'. Franz von Paula Gruithuisen, a German astronomer, observed the ashen light in 1759 and again in 1806</p>
+    <p>Rarely, when Venus is at the crescent stage, the dark sector of its disc is faintly visible, illuminated by a pale glow, the 'ashen light'. Franz von Paula Gruithuisen, a Bavarian astronomer, observed the ashen light in 1759 and again in 1806.</p>
     <p>"Let us assume," he theorised, "that a succession of Venusian Napoleons or Alexanders are in power. The reign of an Emperor of Venus might well last for a little under half a century and the observed appearance (of the ashen light) is evidently the
       result of a general festival of illumination in honour of the ascent of a new emperor to the planet's throne."</p>
-    <p>More recently, and plausibly, theories about the ashen light suggest that it may be caused by electrical activity in the planet's upper atmosphere, much like our own aurora borealis.</p>
+    <p>More recently, and plausibly, theories about the ashen light suggest that it may be caused by electrical activity in the planet's upper atmosphere, much like our own earthly aurora borealis.</p>
   </div>
 
 
@@ -48,8 +48,7 @@
       III.
     </p>
 
-    <p>I am contacting you in hopes of putting me in contact with someone who could answer a few question concerning the webcam itself and the data process, perhaps with the person that walking towards the webcam on the 8th of December 2015 at 16:10:08,
-      and repositioned the camera at 16:18:15 making it so it has a slightly wider frame from 16:23:08 and forward.</p>
+    <p>I am contacting you in hopes of putting me in contact with someone who could answer a few question concerning the webcam itself and the data process, perhaps with the person that was walking towards the webcam on the 8th of December 2015 at 16:10:08,and repositioned the camera at 16:18:15 making it so it has a slightly wider frame from 16:23:08 and forward.</p>
 
 
     <p>Thank you in advance for your time and help,<br> Victoria Douka-Doukopoulou</p>
