--- a/dont_forget_your_belongings/i.html
+++ b/dont_forget_your_belongings/i.html
@@ -3,7 +3,7 @@
 
 <head>
   <meta charset="utf-8">
-  <title>v1</title>
+  <title>don't forget your belongings</title>
   <script src="jquery.js"></script>
   <script src="s.js" charset="utf-8"></script>
   <link rel="stylesheet" href="s.css" media="screen" title="no title">
