--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <head>
   <meta charset="utf-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <meta name="viewport"               content="width=device-width, initial-scale=1.0">
   <title>acatalog.allthingsinvisible.online </title>
   <script src="jquery.js"></script>
   <script src="s.js" charset="utf-8"></script>
@@ -11,49 +11,20 @@
 </head>
 
 <body>
-   <header>
-      <p>* please enter full screen mode</p>
-      <p>and click enter to start</p>
-   </header>
 
-  <section class="left">
-    <p>acatalog.allthingsinvisible.online </p>
-    <p>victoria douka-doukopoulou</p>
-    <p>duration: 17 min</p>
 
-    <br>
-    <br> entries on display:
-    <ul>
 
-      <li> small notes of running into <br>
-         the invisible</li><br>
-      <li> don't forget your belongings</li><br>
-      <li> a partial archive of staring or <br>
-         in fear of venusian fires</li><br>
+    <p>the url: <a href="htpps://acatalog.allthingsinvisible.online">acatalog.allthingsinvisible.online</a> is currently installed at the Opzicht Presentation space of Stroom Den Haag</p>
 
-    </ul>
+   <p>to access <a href="htpps://acatalog.allthingsinvisible.online">acatalog.allthingsinvisible.online</a> please visit Stroom Den Haag at Hogewal 1-9, 2514 HA The Hague, The Netherlands join the no password protected wifi network Stroom and navigate to <a href="htpps://acatalog.allthingsinvisible.online">acatalog.allthingsinvisible.online</a> </p> 
+   <p>visitation times: Wednesday thru Sunday, 12 noon - 5 pm or check <a href="htpps://www.stroom.nl" target="_blank">stroom.nl</a> for more information</p>
     <br>
     <br>
     <br>
 
     <br>
-  </section>
 
-  <section class="right">
-    <p>I have sat down and built myself a loom. <br> I sit on it day and night and I weave the invisible. <br> I make carpets, and blankets and tapestries.<br> and then I write you letters with instructions<br> on how to see them.<br> I am writing you now, to make plans for you <br> to come and see my tapestries.<br>
-    </p>
-    <p>acatalog.allthingsinvisible.online complies stories of the<br>
-       invisible, the unthinkable and the inappreciable.<br> </p>
-      <p>the installation of the three-fold catalog indexes scores for a<br>
-         performative lecture, a documentary and an archive that <br>
-         can never be actualised as their building material is the <br>
-        invisible itself.</p>
-    <p>the catalog is mainly words — technical words, english words <br>
-       motivated by the sensitivity of practicing the art of <br>
-      noticing, of looking for traces and ways of knowing <br>
-      and world making.</p>
 
-  </section>
 
 
   <!-- <br> <br> on display at:
