latest fixes and installing online again

--- a/index.html
+++ b/index.html
@@ -1,113 +1,67 @@
 <!DOCTYPE html>
 <html>
 
-
 <head>
   <meta charset="utf-8">
-  <meta name="viewport"               content="width=device-width, initial-scale=1.0">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>acatalog.allthingsinvisible.online </title>
+  <script src="jquery.js"></script>
+  <script src="s.js" charset="utf-8"></script>
   <link rel="stylesheet" href="s.css" media="screen" title="no title">
 </head>
 
 <body>
+   <header>
+      <p>* please enter full screen mode</p>
+      <p>and click enter to start</p>
+   </header>
 
+  <section class="left">
+    <p>acatalog.allthingsinvisible.online </p>
+    <p>victoria douka-doukopoulou</p>
+    <p>duration: 17 min</p>
 
+    <br>
+    <br> entries on display:
+    <ul>
 
-    <p>the url: <a href="htpps://acatalog.allthingsinvisible.online">acatalog.allthingsinvisible.online</a> is currently installed at the Opzicht Presentation space of Stroom Den Haag</p>
+      <li> small notes of running into <br>
+         the invisible</li><br>
+      <li> don't forget your belongings</li><br>
+      <li> a partial archive of staring or <br>
+         in fear of venusian fires</li><br>
 
-   <p>to access <a href="htpps://acatalog.allthingsinvisible.online">acatalog.allthingsinvisible.online</a> please visit Stroom Den Haag at Hogewal 1-9, 2514 HA The Hague, The Netherlands join the no password protected wifi network Stroom and navigate to <a href="htpps://acatalog.allthingsinvisible.online">acatalog.allthingsinvisible.online</a> </p> 
-   <p>visitation times: Wednesday thru Sunday, 12 noon - 5 pm or check <a href="htpps://www.stroom.nl" target="_blank">stroom.nl</a> for more information</p>
+    </ul>
     <br>
     <br>
     <br>
 
     <br>
+  </section>
 
+  <section class="right">
+    <p>I have sat down and built myself a loom. <br> I sit on it day and night and I weave the invisible. <br> I make carpets, and blankets and tapestries.<br> and then I write you letters with instructions<br> on how to see them.<br> I am writing you now, to make plans for you <br> to come and see my tapestries.<br>
+    </p>
+    <p>acatalog.allthingsinvisible.online complies stories of the<br>
+       invisible, the unthinkable and the inappreciable.<br> </p>
+      <p>the installation of the three-fold catalog indexes scores for a<br>
+         performative lecture, a documentary and an archive that <br>
+         can never be actualised as their building material is the <br>
+        invisible itself.</p>
+    <p>the catalog is mainly words — technical words, english words <br>
+       motivated by the sensitivity of practicing the art of <br>
+      noticing, of looking for traces and ways of knowing <br>
+      and world making.</p>
 
+  </section>
 
 
   <!-- <br> <br> on display at:
-=======
-  <head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>acatalog.allthingsinvisible.online </title>
-    <script src="jquery.js"></script>
-    <script src="s.js" charset="utf-8"></script>
-    <link rel="stylesheet" href="s.css" media="screen" title="no title">
-    <script>
-      (function(i, s, o, g, r, a, m) {
-        i['GoogleAnalyticsObject'] = r;
-        i[r] = i[r] || function() {
-          (i[r].q = i[r].q || []).push(arguments)
-        }, i[r].l = 1 * new Date();
-        a = s.createElement(o),
-          m = s.getElementsByTagName(o)[0];
-        a.async = 1;
-        a.src = g;
-        m.parentNode.insertBefore(a, m)
-      })(window, document, 'script', 'https://www.google-analytics.com/analytics.js', 'ga');
-
-      ga('create', 'UA-102032774-1', 'auto');
-      ga('send', 'pageview');
-
-    </script>
-  </head>
-
-  <body>
-    <header>
-
-      <p>* please enter full screen mode</p>
-
-      <p>and click enter to start</p>
-    </header>
-
-    <section class="left">
-
-      <p>acatalog.allthingsinvisible.online </p>
-
-      <p>victoria douka-doukopoulou</p>
-
-      <p>duration: 17 min</p>
-
-      <br>
-      <br> entries on display:
-      <ul>
-
-        <li> small notes of running into <br> the invisible</li><br>
-        <li> don't forget your belongings</li><br>
-        <li> a partial archive of staring or <br> in fear of venusian fires</li><br>
-
-      </ul>
-      <br>
-      <br>
-      <br>
-
-      <br>
-    </section>
-
-    <section class="right">
-
-      <p>I have sat down and built myself a loom. <br> I sit on it day and night and I weave the invisible. <br> I make carpets, and blankets and tapestries.<br> and then I write you letters with instructions<br> on how to see them.<br> I am writing you now, to make plans for you <br> to come and see my tapestries.<br>
-      </p>
-
-      <p>acatalog.allthingsinvisible.online complies stories of the<br> invisible, the unthinkable and the inappreciable.<br> </p>
-
-      <p>the installation of the three-fold catalog indexes scores for a<br> performative lecture, a documentary and an archive that <br> can never be actualised as their building material is the <br> invisible itself.</p>
-
-      <p>the catalog is mainly words — technical words, english words <br> motivated by the sensitivity of practicing the art of <br> noticing, of looking for traces and ways of knowing <br> and world making.</p>
-
-    </section>
-
-
-    <!-- <br> <br> on display at:
->>>>>>> 084d757eb48e85baf369c44aed319caf6428ed09
   <span id="time_show" class="line"></span><br> current time: <span id="time" class="line">time</span></p>
   <br>
 
 
   <p class="showings">upcoming screenings : <span id="showingslist"></span> </p> -->
-  </body>
-
+</body>
 
 </html>
